Production security review and JavaCodeRunner sandbox hardening
Security fixes:
- Add @Valid to all EncodingController @RequestBody params (validation was declared but never enforced)
- Add @NotNull/@NotBlank/@Size constraints to AnswerRequest and FeynmanRequest DTOs
- Remove hardcoded JWT_SECRET and Stripe key defaults from application.yml (fail-fast if env vars unset)
- Restrict CORS allowedHeaders from wildcard to explicit list; trim origins after split
- Add @EnableMethodSecurity + @PreAuthorize("hasRole('ADMIN')") to all 8 admin controllers
- Extend rate limiting to /api/admin/** (30 req/60s per userId, configurable via RATELIMIT_ADMIN_* env vars)
- Add @Size(max=10000) to CodeRunRequest.testInput
- Guard session.getMetadata() against null in Stripe webhook handler

JavaCodeRunner sandbox:
- ThreadLocalPrintStream: install once at startup; concurrent runs no longer race on System.setOut
  Uses InheritableThreadLocal so threads spawned inside student code also capture to the same buffer
- SandboxedClassLoader: null parent (bootstrap only) blocks Spring classpath; blocks java.net.*,
  java.nio.file.*, java.lang.reflect.*, java.io.File family, Runtime, ProcessBuilder
- Pre-compile source scan rejects System.exit, Runtime.getRuntime, ProcessBuilder, System.set{Out,Err,In}
  before compilation starts

Onboarding:
- OnboardingController + Flyway migration for onboardingCompleted flag
- ARCANE_INITIATE badge awarded on first onboarding completion
- OnboardingModal shown once for new users on HomePage
- Updated LandingPage with pricing section, encoding sequence, social proof, contact section